Sun May 17 23:23:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (SRC_EXT): should be flat.
	  http://twitter.com/_tad_/status/1825862632

Sat May 16 19:52:54 2009  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: add RSS::Maker.supported?(version).

Sat May 16 19:50:34 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb: add nil check.

Sat May 16 19:48:29 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/parser.rb, test/test_parser_1.0.rb: fix foaf:Image
	element causes parse error even if ignore_unknown_element mode.

Sat May 16 19:46:30 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker.rb, lib/rss/maker/0.9.rb,
	test/test_maker_*.rb: add RSS::Maker.supported?

Sat May 16 19:44:09 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/content/*, lib/rss/dublincore/*: fix circular require.
	* test/test_maker_atom_feed.rb,
	test/test_maker_atom_entry.rb: suppress warnings.

Sat May 16 19:41:48 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/feed.rb, test/test_maker_atom_feed.rb:
	remove needless codes.

Sat May 16 19:40:45 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/entry.rb: fix a typo.

Sat May 16 19:38:05 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/feed.rb, test/test_maker_atom_entry.rb,
	test/test_maker_atom_feed.rb: fix duplicated dc:date.
	Reported by Kazuhiro NISHIYAMA. Thanks!!! [ruby-list:46014]

Sat May 16 19:36:52 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/maker/base.rb, lib/rss/maker/1.0.rb, lib/rss/maker/feed.rb,
	test/rss/test_maker_1.0.rb, test/rss/test_maker_atom_feed.rb:
	RSS 1.0 and Atom feed maker treat maker.channel.language as
	maker.channel.dc_language.

Sat May 16 19:35:48 2009  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/rss_recent.rb, sample/rss/list_description.rb: use
	UTF-8.

Sat May 16 19:34:09 2009  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb, test/rss/test_version.rb (RSS::VERSION):
	0.2.5 -> 0.2.6.
