@@ -1,3 +1,9 @@
+Sun May 17 23:27:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* Makefile.in (distclean-ext): removes extension directories.
+
+	* lib/mkmf.rb (try_do): removes conftest.dSYM
+
 Sun May 17 23:23:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/mkmf.rb (SRC_EXT): should be flat.
